--- a/render/src/layout/index.module.less
+++ b/render/src/layout/index.module.less
@@ -1,15 +1,37 @@
 .container {
   height: 100vh;
   display: flex;
-}
-.menu_container {
-  padding: 12px;
-  width: 300px;
   background-color: #4f8d6f;
 }
+.menu_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 12px;
+  width: 240px;
+  .menu_item {
+    font-weight: 600;
+    padding: 24px;
+    font-size: 18px;
+    text-align: left;
+    width: 200px;
+    margin-left: 40px;
+  }
+}
+
 .main_container {
+  flex: 1;
+  margin: 12px;
+  border-radius: 20px;
+  background-color: #fff;
   box-sizing: border-box;
-  height: 100%;
+  // height: 100%;
   overflow: auto;
   padding: 12px;
+  padding-left: 0;
+}
+.title {
+  font-weight: bold;
+  color: #fff;
+  font-size: 28px;
 }
