--- a/render/src/styles/global.less
+++ b/render/src/styles/global.less
@@ -1,4 +1,11 @@
-*{
-    padding: 0;
-    margin: 0;
+* {
+  padding: 0;
+  margin: 0;
+}
+a {
+  text-decoration: none;
+  color: #fff;
+}
+::-webkit-scrollbar {
+  width: 0;
 }
