--- a/render/src/pages/image-shape/components/compress/index.module.less
+++ b/render/src/pages/image-shape/components/compress/index.module.less
@@ -1,5 +1,6 @@
 .container {
-  padding: 20px 0 0 20px;
+  margin-top: 12px;
+  padding: 0 20px 0 20px;
 }
 
 .file_upload_box {
@@ -12,7 +13,7 @@
   width: 100%;
   border-radius: 20px;
   cursor: pointer;
-  border: 2px dashed #656464;
+  border: 2px dashed #fc7e00;
 }
 
 .img_list {
@@ -26,6 +27,7 @@
 }
 .img_box {
   width: 100%;
+
   position: relative;
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   background-color: #ffede1;
@@ -68,6 +70,7 @@
   object-fit: contain;
 }
 .upload_text {
+  color: #fc7e00;
   font-size: 20px;
   font-weight: 600;
 }
