feat: 整体布局修改

--- a/render/src/pages/image-shape/components/compress/index.module.less
+++ b/render/src/pages/image-shape/components/compress/index.module.less
@@ -22,7 +22,8 @@
   &:hover {
     .icon,
     .text_color {
-      color: #73d13d;
+      font-weight: 600;
+      color: #73d13d !important;
     }
   }
 }
