--- a/render/src/layout/index.module.less
+++ b/render/src/layout/index.module.less
@@ -1,21 +1,29 @@
 .container {
   height: 100vh;
   display: flex;
-  background-color: #4f8d6f;
+  background-color: #f0f0f0;
 }
 .menu_container {
+  background-color: #000;
+  img {
+    filter: invert(1);
+  }
   display: flex;
+  // background-color: #ffffff;
   flex-direction: column;
   align-items: center;
-  padding: 12px;
-  width: 240px;
+  padding: 40px 12px;
+  width: 52px;
   .menu_item {
+    background-color: #e6ffee;
+    color: #333333;
     font-weight: 600;
-    padding: 24px;
+    padding: 12px 24px;
     font-size: 18px;
     text-align: left;
     width: 200px;
-    margin-left: 40px;
+    // border-radius: 25%;
+    // margin-left: 40px;
   }
 }
 
@@ -32,6 +40,6 @@
 }
 .title {
   font-weight: bold;
-  color: #fff;
+  color: #333333;
   font-size: 28px;
 }
