--- a/render/src/layout/index.module.less
+++ b/render/src/layout/index.module.less
@@ -4,9 +4,10 @@
   background-color: #f0f0f0;
 }
 .menu_container {
+  color: #fff;
   background-color: #000;
   img {
-    filter: invert(1);
+    filter: invert(0.1);
   }
   display: flex;
   // background-color: #ffffff;
@@ -16,7 +17,7 @@
   width: 52px;
   .menu_item {
     background-color: #e6ffee;
-    color: #333333;
+    // color: #333333;
     font-weight: 600;
     padding: 12px 24px;
     font-size: 18px;
@@ -33,10 +34,21 @@
   border-radius: 20px;
   background-color: #fff;
   box-sizing: border-box;
-  // height: 100%;
   overflow: auto;
-  // padding: 12px 12px 0 12px;
   padding-left: 0;
+}
+.menu_icon {
+  color: #fff;
+  width: 50px;
+  display: flex;
+  justify-content: center;
+  border-radius: 8px;
+  height: 50px;
+  transition: all 0.3s;
+  &:hover {
+    color: rgb(52, 199, 89);
+    background-color: rgba(52, 199, 89, 0.2);
+  }
 }
 .title {
   font-weight: bold;
