--- a/render/src/layout/index.module.less
+++ b/render/src/layout/index.module.less
@@ -10,29 +10,24 @@
     filter: invert(0.1);
   }
   display: flex;
-  // background-color: #ffffff;
   flex-direction: column;
   align-items: center;
   padding: 40px 12px;
-  width: 52px;
+  width: 72px;
   .menu_item {
     background-color: #e6ffee;
-    // color: #333333;
+
     font-weight: 600;
     padding: 12px 24px;
     font-size: 18px;
     text-align: left;
     width: 200px;
-    // border-radius: 25%;
-    // margin-left: 40px;
   }
 }
 
 .main_container {
   flex: 1;
   margin: 12px;
-  border-radius: 20px;
-  background-color: #fff;
   box-sizing: border-box;
   overflow: auto;
   padding-left: 0;
@@ -46,7 +41,7 @@
   height: 50px;
   transition: all 0.3s;
   &:hover {
-    color: rgb(52, 199, 89);
+    color: @primary-color;
     background-color: rgba(52, 199, 89, 0.2);
   }
 }
