--- a/render/src/layout/index.module.less
+++ b/render/src/layout/index.module.less
@@ -45,6 +45,10 @@
     background-color: rgba(52, 199, 89, 0.2);
   }
 }
+.menu_item_active {
+  color: @primary-color;
+  background-color: rgba(52, 199, 89, 0.2);
+}
 .title {
   font-weight: bold;
   color: #333333;
