--- a/render/src/pages/image-shape/index.module.less
+++ b/render/src/pages/image-shape/index.module.less
@@ -6,7 +6,7 @@
 .upload_container {
   padding: 20px;
   width: 50%;
-  min-height: 92vh;
+  height: 300px;
   border-radius: 20px;
   background-color: #000;
 }
@@ -17,7 +17,62 @@
 }
 .preview_container {
   width: 50%;
-  min-height: calc(100vh - 24px);
+  padding: 12px;
   border-radius: 20px;
-  background-color: #fff;
+  max-height: 80vh;
+  background-color: #000;
+  overflow: auto;
+}
+
+.img_list {
+  overflow: auto;
+  margin-top: 20px;
+  display: grid;
+  row-gap: 14px;
+  column-gap: 14px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+.img_box {
+  width: 100%;
+
+  position: relative;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  background-color: #ffede1;
+  border-radius: 4px;
+  cursor: pointer;
+  &:hover {
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  }
+  &:hover .operator_mask {
+    opacity: 1;
+  }
+  .operator_mask {
+    box-sizing: border-box;
+    padding: 0 4px;
+    transition: all 0.3s;
+    opacity: 0;
+    font-weight: 600;
+    display: flex;
+    justify-content: space-between;
+    font-size: 12px;
+    color: #fff;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #00000071;
+
+    .preview {
+      display: inline;
+      height: 32px;
+      &:hover {
+        color: #aeff7f;
+      }
+    }
+  }
+}
+
+.img_item {
+  width: 100%;
+  height: 200px;
+  object-fit: contain;
 }
