--- a/render/src/layout/index.module.less
+++ b/render/src/layout/index.module.less
@@ -3,7 +3,9 @@
   display: flex;
   background-color: #f0f0f0;
 }
+
 .menu_container {
+  -webkit-app-region: drag;
   color: #fff;
   background-color: #000;
   img {
