--- a/render/src/pages/image-shape/index.module.less
+++ b/render/src/pages/image-shape/index.module.less
@@ -4,6 +4,7 @@
 }
 
 .upload_container {
+  border: 1px solid @primary-color;
   padding: 20px;
   height: 300px;
   border-radius: 20px;
@@ -15,6 +16,7 @@
   color: @primary-color;
 }
 .preview_container {
+  border: 1px solid @primary-color;
   width: 50%;
   padding: 12px;
   border-radius: 20px;
