feat: 密钥生成逻辑创建

--- a/render/src/layout/index.module.less
+++ b/render/src/layout/index.module.less
@@ -5,6 +5,7 @@
 }
 
 .menu_container {
+  border-right: 1px solid #c9c9c963;
   -webkit-app-region: drag;
   color: #fff;
   background-color: #000;
