--- a/render/src/pages/image-shape/index.module.less
+++ b/render/src/pages/image-shape/index.module.less
@@ -8,7 +8,6 @@
   padding: 20px;
   height: 300px;
   border-radius: 20px;
-  background-color: #000;
 }
 .title {
   font-weight: 32px;
@@ -60,7 +59,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: #00000071;
+    // background-color: #00000071;
 
     .preview {
       display: inline;
