--- a/render/src/styles/global.css
+++ b/render/src/styles/global.css
@@ -29,6 +29,11 @@
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
+    /* 新增 */
+    --menu-bg: #fff;
+    --menu-icon-bg: #F7F7F7;
+    --menu-text-color-active: #007AFF;
+    --menu-text-color-default: #808080;
   }
 
   .dark {
@@ -56,6 +61,11 @@
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
+    /* 新增 */
+    --menu-bg: #1C1C1C;
+    --menu-icon-bg: #2A2A2A;
+    --menu-text-color-active: #0B84FF;
+    --menu-text-color-default: #7F7F7F;
   }
 }
 
