--- a/render/src/styles/global.css
+++ b/render/src/styles/global.css
@@ -30,6 +30,9 @@
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     /* 新增 */
+    --icon-bg-orange: #FBC74E;
+    --text-color: #000;
+    --container-bg: #F4F4F4;
     --menu-bg: #fff;
     --menu-icon-bg: #F7F7F7;
     --menu-text-color-active: #007AFF;
@@ -62,6 +65,9 @@
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
     /* 新增 */
+    --icon-bg-orange: #FBC74E;
+    --text-color: #dddddd;
+    --container-bg: #111111;
     --menu-bg: #1C1C1C;
     --menu-icon-bg: #2A2A2A;
     --menu-text-color-active: #0B84FF;
