--- a/render/src/styles/global.css
+++ b/render/src/styles/global.css
@@ -30,6 +30,8 @@
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     /* 新增 */
+    --select-menu-bg: #B6B7BB;
+    --border-default: #EBEBEB;
     --icon-bg-orange: #FBC74E;
     --text-color: #000;
     --container-bg: #F4F4F4;
@@ -65,6 +67,8 @@
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
     /* 新增 */
+    --select-menu-bg: #B6B7BB;
+    --border-default: #282828;
     --icon-bg-orange: #FBC74E;
     --text-color: #dddddd;
     --container-bg: #111111;
